--- a/index.html
+++ b/index.html
@@ -146,25 +146,11 @@
       <section id="cronograma">
         <h2>Cronograma de Sprints</h2>
         <ul>
-          <li>
-            <strong>Sprint 1:</strong> 20/04/2025–26/04/2025 — setup e
-            wireframes
-          </li>
-          <li>
-            <strong>Sprint 2:</strong> 27/04/2025–03/05/2025 — HTML/CSS e
-            responsivo
-          </li>
-          <li>
-            <strong>Sprint 3:</strong> 04/05/2025–10/05/2025 — Conteúdo C básico
-          </li>
-          <li>
-            <strong>Sprint 4:</strong> 11/05/2025–17/05/2025 — Funções, quizzes,
-            sintaxe
-          </li>
-          <li>
-            <strong>Sprint 5:</strong> 18/05/2025–24/05/2025 — Testes,
-            documentação e deploy
-          </li>
+          <li><strong>Sprint 1:</strong> Setup e wireframes</li>
+          <li><strong>Sprint 2:</strong> HTML/CSS e responsivo</li>
+          <li><strong>Sprint 3:</strong> Conteúdo C básico</li>
+          <li><strong>Sprint 4:</strong> Funções, quizzes, sintaxe</li>
+          <li><strong>Sprint 5:</strong> Testes, documentação e deploy</li>
         </ul>
       </section>
 
