--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
       </section>
 
       <section id="cronograma">
-        <h2>Cronograma de Sprints</h2>
+        <h2>Sprints</h2>
         <ul>
-          <li><strong>Sprint 1:</strong> Setup e wireframes</li>
-          <li><strong>Sprint 2:</strong> HTML/CSS e responsivo</li>
-          <li><strong>Sprint 3:</strong> Conteúdo C básico</li>
-          <li><strong>Sprint 4:</strong> Funções, quizzes, sintaxe</li>
-          <li><strong>Sprint 5:</strong> Testes, documentação e deploy</li>
+          <li><strong>Sprint 1:</strong>Setup e wireframes</li>
+          <li><strong>Sprint 2:</strong>HTML/CSS e responsivo</li>
+          <li><strong>Sprint 3:</strong>Conteúdo C básico</li>
+          <li><strong>Sprint 4:</strong>Funções, quizzes, sintaxe</li>
+          <li><strong>Sprint 5:</strong>Testes, documentação e deploy</li>
         </ul>
       </section>
 
