--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       </section>
 
       <section id="cronograma">
-        <h2>Sprints</h2>
+        <h2>Sprints:</h2>
         <ul>
           <li><strong>Sprint 1:</strong>Setup e wireframes</li>
           <li><strong>Sprint 2:</strong>HTML/CSS e responsivo</li>
