--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <section id="objetivo-geral">
         <h2>Objetivo Geral</h2>
         <p>
-          Criar uma página web interativa que auxilie iniciantes a entenderem os
+          Criar uma plataforma interativa com documentações de C, aprendizagem
+          sequencial e vídeo aulas, que auxilie iniciantes a entenderem os
           fundamentos da programação em C.
         </p>
       </section>
@@ -50,86 +51,209 @@
           <li>Quizzes para verificar compreensão.</li>
           <li>HTML semântico, contraste adequado e responsividade.</li>
           <li>Divulgação em repositório aberto.</li>
+          <li>Vídeo Aulas gravadas para cada módulo do curso.</li>
         </ol>
       </section>
 
       <section id="planejamento">
-        <h2>Planejamento de Horas (120h)</h2>
-        <table>
-          <thead>
+        <h2>Planejamento de Horas por Membro</h2>
+        <table
+          style="width: 100%; border-collapse: collapse; text-align: center"
+        >
+          <thead style="background: #004d33; color: #fff">
             <tr>
-              <th>Atividade</th>
-              <th>Horas</th>
+              <th style="padding: 8px; border: 1px solid #ccc">Atividade</th>
+              <th style="padding: 8px; border: 1px solid #ccc">
+                Horas (total)
+              </th>
+              <th style="padding: 8px; border: 1px solid #ccc">Luiz</th>
+              <th style="padding: 8px; border: 1px solid #ccc">Igor</th>
+              <th style="padding: 8px; border: 1px solid #ccc">João</th>
+              <th style="padding: 8px; border: 1px solid #ccc">Eleonora</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>Configuração de ambiente e repositório</td>
-              <td>8</td>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Configuração de ambiente e repositório
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">10</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
             </tr>
             <tr>
-              <td>Design de interface e wireframes</td>
-              <td>12</td>
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Design de interface e wireframes
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">16</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+            </tr>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Estruturação inicial em HTML/CSS
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">22</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
             </tr>
             <tr>
-              <td>Estruturação inicial em HTML/CSS</td>
-              <td>16</td>
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Implementação de layout responsivo
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">26</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+            </tr>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                • Introdução e variáveis
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">6</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
             <tr>
-              <td>Implementação de layout responsivo</td>
-              <td>14</td>
+              <td style="padding: 8px; border: 1px solid #ccc">
+                • Operadores e controle de fluxo
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">6</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+            </tr>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                • Funções e modularização
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">6</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
             </tr>
             <tr>
-              <td>Desenvolvimento de conteúdo</td>
-              <td>24</td>
+              <td style="padding: 8px; border: 1px solid #ccc">
+                • Quiz e interatividade
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">6</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+            </tr>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Integração de realce de sintaxe
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">8</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
             <tr>
-              <td>• Introdução e variáveis</td>
-              <td>6</td>
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Testes de usabilidade e acessibilidade
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">14</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+            </tr>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Ajustes e correções (UI/UX e bugs)
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">12</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
             <tr>
-              <td>• Operadores e controle</td>
-              <td>6</td>
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Gravação das aulas
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">10</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+            </tr>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Edição das aulas
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">14</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
             <tr>
-              <td>• Funções e modularização</td>
-              <td>6</td>
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Deploy no GitHub Pages
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">8</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+            </tr>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Documentação e README
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">10</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
+              <td style="padding: 8px; border: 1px solid #ccc">❌</td>
             </tr>
             <tr>
-              <td>• Quiz e interatividade</td>
-              <td>6</td>
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Reuniões e revisão
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">10</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
-            <tr>
-              <td>Integração de realce de sintaxe</td>
-              <td>6</td>
+            <tr style="background: #e6ffe6">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Reserva para imprevistos
+              </td>
+              <td style="padding: 8px; border: 1px solid #ccc">8</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
+              <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
-            <tr>
-              <td>Testes de usabilidade e acessibilidade</td>
-              <td>10</td>
-            </tr>
-            <tr>
-              <td>Ajustes e correções</td>
-              <td>10</td>
-            </tr>
-            <tr>
-              <td>Deploy no GitHub Pages</td>
-              <td>4</td>
-            </tr>
-            <tr>
-              <td>Documentação e README</td>
-              <td>6</td>
-            </tr>
-            <tr>
-              <td>Reuniões e revisão</td>
-              <td>4</td>
-            </tr>
-            <tr>
-              <td>Reserva para imprevistos</td>
-              <td>6</td>
-            </tr>
-            <tr class="total">
-              <td>Total</td>
-              <td>120</td>
+            <tr style="font-weight: bold; background: #004d33; color: #fff">
+              <td style="padding: 8px; border: 1px solid #ccc">
+                Total individual (120 h)
+              </td>
+              <td
+                colspan="5"
+                style="padding: 8px; border: 1px solid #ccc; text-align: right"
+              >
+                Luiz: 120 h &nbsp; Igor: 120 h &nbsp; João: 120 h &nbsp; 
+                Eleonora: 120 h
+              </td>
             </tr>
           </tbody>
         </table>
@@ -144,13 +268,55 @@
       </section>
 
       <section id="cronograma">
-        <h2>Sprints:</h2>
+        <h2>Sprints Semanais</h2>
         <ul>
-          <li><strong>Sprint 1:</strong>Setup e wireframes</li>
-          <li><strong>Sprint 2:</strong>HTML/CSS e responsivo</li>
-          <li><strong>Sprint 3:</strong>Conteúdo C básico</li>
-          <li><strong>Sprint 4:</strong>Funções, quizzes, sintaxe</li>
-          <li><strong>Sprint 5:</strong>Testes, documentação e deploy</li>
+          <li>
+            <strong>Sprint 1 (Semana 1): Setup e Planejamento</strong>
+            <ul>
+              <li>Reuniões semanais e revisão de escopo</li>
+              <li>Configuração de ambiente e repositório</li>
+              <li>Design de interface e wireframes</li>
+            </ul>
+          </li>
+          <li>
+            <strong>Sprint 2 (Semana 2): Estrutura e Responsividade</strong>
+            <ul>
+              <li>Reuniões semanais</li>
+              <li>Estruturação inicial em HTML/CSS</li>
+              <li>Implementação de layout responsivo</li>
+              <li>Integração de realce de sintaxe</li>
+            </ul>
+          </li>
+          <li>
+            <strong>Sprint 3 (Semana 3): Conteúdo Didático em C</strong>
+            <ul>
+              <li>Reuniões semanais</li>
+              <li>Introdução e variáveis</li>
+              <li>Operadores e controle de fluxo</li>
+              <li>Funções e modularização</li>
+              <li>Quiz e interatividade</li>
+            </ul>
+          </li>
+          <li>
+            <strong>Sprint 4 (Semana 4): Produção Multimídia e Testes</strong>
+            <ul>
+              <li>Reuniões semanais</li>
+              <li>Gravação das aulas</li>
+              <li>Edição das aulas</li>
+              <li>Testes de usabilidade e acessibilidade</li>
+              <li>Ajustes e correções (UI/UX e bugs)</li>
+            </ul>
+          </li>
+          <li>
+            <strong>Sprint 5 (Semana 5): Finalização e Publicação</strong>
+            <ul>
+              <li>Reuniões semanais</li>
+              <li>Documentação e README</li>
+              <li>Deploy no GitHub Pages</li>
+              <li>Reunião de revisão e retrospectiva</li>
+              <li>Reserva para imprevistos e ajustes finais</li>
+            </ul>
+          </li>
         </ul>
       </section>
 
