Commit de ajuste final

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <h2>Objetivo Geral</h2>
         <p>
           Criar uma plataforma interativa com documentações de C, aprendizagem
-          sequencial e vídeo aulas, que auxilie iniciantes a entenderem os
-          fundamentos da programação em C.
+          sequencial e vídeo aulas por módulos, de maneira que auxilie
+          iniciantes a entenderem os fundamentos da programação em C.
         </p>
       </section>
 
@@ -60,7 +60,7 @@
         <table
           style="width: 100%; border-collapse: collapse; text-align: center"
         >
-          <thead style="background: #004d33; color: #fff">
+          <thead style="background: #005f73; color: #fff">
             <tr>
               <th style="padding: 8px; border: 1px solid #ccc">Atividade</th>
               <th style="padding: 8px; border: 1px solid #ccc">
@@ -73,7 +73,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 Configuração de ambiente e repositório
               </td>
@@ -93,7 +93,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">❌</td>
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 Estruturação inicial em HTML/CSS
               </td>
@@ -113,7 +113,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 • Introdução e variáveis
               </td>
@@ -133,7 +133,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 • Funções e modularização
               </td>
@@ -153,7 +153,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">❌</td>
               <td style="padding: 8px; border: 1px solid #ccc">❌</td>
             </tr>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 Integração de realce de sintaxe
               </td>
@@ -173,7 +173,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 Ajustes e correções (UI/UX e bugs)
               </td>
@@ -193,7 +193,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">❌</td>
               <td style="padding: 8px; border: 1px solid #ccc">❌</td>
             </tr>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 Edição das aulas
               </td>
@@ -213,7 +213,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">❌</td>
               <td style="padding: 8px; border: 1px solid #ccc">❌</td>
             </tr>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 Documentação e README
               </td>
@@ -233,7 +233,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
-            <tr style="background: #e6ffe6">
+            <tr style="background: #aad4dc">
               <td style="padding: 8px; border: 1px solid #ccc">
                 Reserva para imprevistos
               </td>
@@ -243,7 +243,7 @@
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
               <td style="padding: 8px; border: 1px solid #ccc">✅</td>
             </tr>
-            <tr style="font-weight: bold; background: #004d33; color: #fff">
+            <tr style="font-weight: bold; background: #005f73; color: #fff">
               <td style="padding: 8px; border: 1px solid #ccc">
                 Total individual (120 h)
               </td>
@@ -321,7 +321,7 @@
       </section>
 
       <section id="contato">
-        <h2>Contato</h2>
+        <h2>Equipe</h2>
         <ul>
           <li>Luiz Antonio da Silva Marçon</li>
           <li>Igor Martins Santos</li>
