alteração das datas das sprints

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         <h2>Sprints Semanais</h2>
         <ul>
           <li>
-            <strong>Sprint 1 (Semana 1): Setup e Planejamento</strong>
+            <strong>Sprint 1 (Semana 1): Setup e Planejamento - 21/04 - 28/04</strong>
             <ul>
               <li>Reuniões semanais e revisão de escopo</li>
               <li>Configuração de ambiente e repositório</li>
@@ -279,7 +279,7 @@
             </ul>
           </li>
           <li>
-            <strong>Sprint 2 (Semana 2): Estrutura e Responsividade</strong>
+            <strong>Sprint 2 (Semana 2): Estrutura e Responsividade - 05/05 - 12/05</strong>
             <ul>
               <li>Reuniões semanais</li>
               <li>Estruturação inicial em HTML/CSS</li>
@@ -288,7 +288,7 @@
             </ul>
           </li>
           <li>
-            <strong>Sprint 3 (Semana 3): Conteúdo Didático em C</strong>
+            <strong>Sprint 3 (Semana 3): Conteúdo Didático em C - 19/05 - 26/05</strong>
             <ul>
               <li>Reuniões semanais</li>
               <li>Introdução e variáveis</li>
@@ -298,7 +298,7 @@
             </ul>
           </li>
           <li>
-            <strong>Sprint 4 (Semana 4): Produção Multimídia e Testes</strong>
+            <strong>Sprint 4 (Semana 4): Produção Multimídia e Testes - 26/05 - 02/06</strong>
             <ul>
               <li>Reuniões semanais</li>
               <li>Gravação das aulas</li>
@@ -308,7 +308,7 @@
             </ul>
           </li>
           <li>
-            <strong>Sprint 5 (Semana 5): Finalização e Publicação</strong>
+            <strong>Sprint 5 (Semana 5): Finalização e Publicação - 02/06 - 09/06</strong>
             <ul>
               <li>Reuniões semanais</li>
               <li>Documentação e README</li>
