--- a/siteCerti.html/page.html
+++ b/siteCerti.html/page.html
@@ -149,6 +149,12 @@
       <p>Você pode baixar os materiais complementares abaixo:</p>
       <a href="#" class="button-link">Baixar PDF</a>
     </section>
+
+    <section id="contato">
+      <h2>Certificado e Contato</h2>
+      <p>Ao concluir o curso, solicite seu certificado preenchendo o formulário de contato.</p>
+      <a href="#" class="button-link">Solicitar Certificado</a>
+    </section>
   </main>
 
   <footer>
