Recondionando as rotas.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/stylesite.css" />
+    <link rel="stylesheet" href="./css/stylesite.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -21,7 +21,7 @@
   <body>
     <header class="site-header">
       <div class="container">
-        <img src="/img/logo.png" alt="Logo" class="logo" />
+        <img src="./img/logo.png" alt="Logo" class="logo" />
         <nav class="nav">
           <ul>
             <li><a href="#objetivos">Objetivos</a></li>
@@ -226,7 +226,7 @@
       </div>
     </footer>
 
-    <script src="/script/popup.js"></script>
-    <script src="script/redirecionamentoSuave.js"></script>
+    <script src="./script/popup.js"></script>
+    <script src="./script/redirecionamentoSuave.js"></script>
   </body>
 </html>
