Commit: Aplicação finalizada

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="#proposito">Propósito</a></li>
             <li><a href="#modulos">Módulos das aulas</a></li>
             <li><a href="#time">Time</a></li>
+            <li><a href="quiz.html">Quiz</a></li>
           </ul>
         </nav>
       </div>
@@ -65,7 +66,10 @@
           <button class="btn btn-secondary">Fundamentos da Programação</button>
           <button class="btn btn-dark">Base da linguagem em C</button>
         </div>
-        <a href="material.pdf" class="btn btn-download"
+        <a
+          href="./pdf/Material de Apoio - Fundamentos em C.pdf"
+          class="btn btn-download"
+          target="_blank"
           >Download Material de Apoio</a
         >
       </div>
